[project]
name = "age-pred-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
  "totalsegmentator>=2.7.0",
  "setuptools>=78.1.0",
  "ipykernel>=6.29.5",
  "openpyxl>=3.1.5",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118"},
]
torchvision = [
  { index = "pytorch-cu118" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
